syntax = "proto3";
option java_multiple_files = true;
package com.orness.core.connectorkafkaservice.domain;

message MessageRequest {
    string id = 1;
    string name = 2;
    string topic = 3;
    string content = 4;
}

message MessageResponse {
    string message = 1;
}

service ConnectorKafkaService {
    rpc message(MessageRequest) returns (MessageResponse);

    rpc messageStream(MessageRequest) returns (stream MessageResponse);
}